tests/ui/extern-flag/multiple-opts.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `somedep`
  --> $DIR/multiple-opts.rs:19:5
   |
LL |     somedep::somefun();
   |     ^^^^^^^ use of undeclared crate or module `somedep`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0433`.
